syntax = "proto3";

package user;

option go_package = "user/proto";

service User {
  rpc LoginUser (UserRequest) returns (LoginResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message AccessTokenResponse {
  string access_token = 1;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  AccessTokenResponse data = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string roleId = 4;
}

message CreateUserResponse {
  bool status = 1;
  string message = 2;
}